syntax = "proto3";
package dmolik.veriname.veriname;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "veriname/ident.proto";
// this line is used by starport scaffolding # 1
import "gogoproto/gogo.proto";

option go_package = "github.com/dmolik/veriname/x/veriname/types";

// Query defines the gRPC querier service.
service Query {
    // Queries a ident by index.
	rpc Ident(QueryGetIdentRequest) returns (QueryGetIdentResponse) {
		option (google.api.http).get = "/dmolik/veriname/veriname/ident/{index}";
	}

	// Queries a list of ident items.
	rpc IdentAll(QueryAllIdentRequest) returns (QueryAllIdentResponse) {
		option (google.api.http).get = "/dmolik/veriname/veriname/ident";
	}

// this line is used by starport scaffolding # 2
}

message QueryGetIdentRequest {
	  string index = 1;

}

message QueryGetIdentResponse {
	Ident ident = 1 [(gogoproto.nullable) = false];
}

message QueryAllIdentRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllIdentResponse {
	repeated Ident ident = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
